# CMake_templates

./: LICENSE  README.md
basic_templates/auto_list_files/: CMakeLists.txt  mock_dummy.h
basic_templates/auto_list_files/mock_cpp/: mock_dummy.cpp
basic_templates/single target/: CMakeLists.txt  mock_main.cpp
basic_templates/single_target/: CMakeLists.txt
